sandbox/output
TicketDispenserTest.java:37: error: cannot find symbol
        assertEquals(59, turnNumber);       
                         ^
  symbol:   variable turnNumber
  location: class TicketDispenserTest
1 error
